--- a/python/websocket/static/index.html
+++ b/python/websocket/static/index.html
@@ -8,12 +8,9 @@
 </head>
 <body>
     <script src="socket.js"></script>
-    <div id="username" class="names"></div>
-    <div id="usrname" class="names"></div>
-    <br>
-    <br>
     <br>
     <div id="rooms"></div>
+    <div id="game"></div>
     <div id="fails"></div>
     <div id="msgs">
         <input id="name" onkeydown="
@@ -41,5 +38,10 @@
         <div id="name"></div>
         <div id="ppl"></div>
     </div>
+    <br>
+    <br>
+    <br>
+    <div id="username" class="username"></div>
+    <div id="usrname" class="username"></div>
 </body>
 </html>
